assets/styles/modules/paragraphs.scss
/* ... */
// CTA
.paragraph--type--cta {
  position: relative;
  overflow: hidden;
  min-height: 525px;
  color: $white;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: left;
  padding: 30px 10px;

  @media (max-width: #{$screen-tablet}) {
    background-image: none !important;
  }

  @media (min-width: #{$screen-tablet}) {
    height: 525px;
    min-height: unset;
    background-position: center;
    padding: 0 0 60px;
  }

  .container {
    display: flex;
    align-items: center;
    height: 100%;
  }

  .content {
    position: relative;
    z-index: 1;
  }

  .field--name-field-title {
    max-width: 710px;

    h2 {
      color: $white;
      font-size: 30px;
      margin-bottom: 10px;

      @media (min-width: #{$screen-tablet}) {
        font-size: 45px;
        margin-top: 25px;
        margin-bottom: 30px;
      }
    }
  }

  .field--name-field-body {
    max-width: 630px;
    font-size: 16px;
    line-height: 24px;
    opacity: 0.75;

    @media (min-width: #{$screen-tablet}) {
      font-size: 18px;
      line-height: 28px;
    }
  }

  .field--name-field-link {
    margin-top: 30px;

    @media (min-width: #{$screen-tablet}) {
      margin-top: 40px;
    }

    a {
      display: inline-block;
      background: $white url(../images/arrow-right-blue.svg) no-repeat right 30px center;
      background-size: 17px;
      color: $dark-blue-01;
      font-size: 16px;
      font-weight: 600;
      line-height: 25px;
      border-radius: 27.5px;
      padding: 15px 60px 15px 30px;

      @media (min-width: #{$screen-tablet}) {
        background: $white url(../images/arrow-right-blue.svg) no-repeat right 25px center;
        background-size: 20px;
        font-size: 18px;
        padding: 15px 65px 15px 27px;
      }

      &:hover,
      &:focus {
        background: $subtle-grey-01 url(../images/arrow-right-blue.svg) no-repeat right 30px center;
        background-size: 17px;
        color: $dark-blue-01;
        text-decoration: none;

        @media (min-width: #{$screen-tablet}) {
          background: $subtle-grey-01 url(../images/arrow-right-blue.svg) no-repeat right 25px center;
          background-size: 20px;
        }
      }
    }
  }

  .field--name-field-bg-image {
    img {
      display: none;
    }
  }

  .field--name-field-bg-image-mobile {
    @media (min-width: #{$screen-tablet}) {
      display: none;
    }

    img {
      position: absolute;
      right: 0;
      left: 0;
      bottom: 0;
      width: 100%;
      z-index: 0;
    }
  }
}

// Guide selection
.paragraph--type--guide-selection {
  padding: 25px 0;

  @media (min-width: #{$screen-tablet}) {
    padding: 50px 0;
  }

  .content {
    background-color: $subtle-grey-02;
    border-top: 3px solid $blue;
    padding: 30px 10px;

    @media (max-width: #{$screen-tablet}) {
      padding: 30px 10px 20px;
    }

    @media (min-width: #{$screen-tablet}) {
      display: flex;
      padding: 45px 30px;
    }
  }

  .field--name-field-title {
    h2 {
      font-size: 27px;
      max-width: 450px;
      margin-bottom: 45px;

      @media (min-width: #{$screen-tablet}) {
        font-size: 45px;
        margin-bottom: 8px;
      }
    }
  }

  .field--name-field-links {
    a {
      display: inline-block;
      background: url(../images/short-arrow-right-blue.svg) no-repeat right center;
      background-size: 9px;
      color: $dark-blue-01;
      font-size: 16px;
      line-height: 1.2;
      padding-right: 25px;
      transition: padding .3s;

      @media (min-width: #{$screen-tablet}) {
        display: flex;
        align-items: center;
        min-height: 40px;
        background: url(../images/arrow-circle-grey.svg) no-repeat right 10px center;
        font-size: 18px;
        padding-right: 55px;
        transition: background .3s;
      }

      &:hover,
      &:focus {
        text-decoration: underline;
        padding-right: 32px;

        @media (min-width: #{$screen-tablet}) {
          background: url(../images/arrow-circle-grey.svg) no-repeat right 3px center;
          padding-right: 55px;
        }
      }
    }

    .field__item {
      border-bottom: 1px solid $cold-grey-01;
      padding: 15px 0;

      @media (max-width: #{$screen-tablet}) {
        display: none;

        &:first-child,
        &:nth-child(2),
        &:nth-child(3) {
          display: block;
        }

        &:nth-child(3) {
          border-bottom: none;
        }
      }

      @media (min-width: #{$screen-tablet}) {
        padding: 9px 0;
      }

      &:first-child {
        border-top: 1px solid $cold-grey-01;

        @media (min-width: #{$screen-tablet}) {
          border-top: none;
        }
      }

      &:last-child {
        border-bottom: none;
      }
    }
  }
}
/* ... */

